# folia-backend

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  loader.py  main.py  requirements.txt  schema.sql
config/: settings.toml  sources.toml
config/freshrss/: README.md  subscriptions.opml
docs/: daily-frontpage-spec.md  data-pipeline-technical-design.md  freshrss-setup.md  model-benchmark.md  operations.md
scripts/: base-down.sh  base-status.sh  base-up.sh  folia.sh  init_db.py  pipeline-loop.sh  publish.sh
src/folia/pipeline/: analyze.py  categorize.py  cli.py  config.py  db.py  dedupe.py  embeddings.py  extractor.py  facts.py  freshrss_client.py  model_client.py  ollama.py  poller.py  prompts.py  synthesizer.py  viewer.py
src/folia/pipeline/panel/: __init__.py  app.py  runner.py  settings.py  store.py
src/folia/pipeline/store/: __init__.py  export.py  loader.py  (+1 more)
src/frontpage_pipeline/: __init__.py  cli.py  config.py  crawler.py  db.py  dedupe.py  embeddings.py  export.py  extractor.py  facts.py  fetcher.py  freshrss_client.py  models.py  prompts.py  synthesizer.py  text.py  viewer.py
tests/: test_categorize.py  test_config.py  test_dedupe_twophase.py  test_embeddings.py  test_export.py  test_freshrss_client.py  test_model_client.py  test_model_pipeline.py  test_pipeline.py  test_poller.py  test_viewer.py
tests/fixtures/: freshrss_reading_list.json  sample_feed.xml
web/: README.md  package.json
web/functions/: _shared.js  index.js
web/functions/story/: [id].js
(+4 files in other folders)
