[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "frontpage-pipeline"
version = "0.1.0"
description = "Data pipeline for the Frontpage private news prototype"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
frontpage-pipeline = "frontpage_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.frontpage]
config_dir = "config"
database_path = "data/frontpage.sqlite"
