[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "folia-pipeline"
version = "0.1.0"
description = "Folia data pipeline: crawl, clean, aggregate, and store news into Postgres"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.10",   # 入库: 写聚合结果到 Postgres(Neon)
]

[project.scripts]
folia-pipeline = "folia.pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["folia*"]
